# rust-libp2p

./: CHANGELOG.md  Cargo.toml
core/: CHANGELOG.md
core/src/: connection.rs  lib.rs
core/src/transport/: upgrade.rs
libp2p/: Cargo.toml
libp2p/src/: lib.rs
misc/multistream-select/src/: negotiated.rs  protocol.rs
muxers/mplex/src/: io.rs  lib.rs
muxers/yamux/src/: lib.rs
protocols/gossipsub/: Cargo.toml
protocols/gossipsub/src/: behaviour.rs  handler.rs  mcache.rs  peer_score.rs
protocols/identify/src/: protocol.rs
protocols/kad/src/: behaviour.rs  handler.rs
protocols/mdns/src/: behaviour.rs
protocols/mdns/src/behaviour/: iface.rs
src/: lib.rs
swarm-derive/src/: lib.rs
swarm/src/: stream_protocol.rs
swarm/tests/ui/fail/: out_event_deprecation.stderr
transports/dns/src/: lib.rs
transports/noise/: Cargo.toml
transports/noise/src/: io.rs  protocol.rs
transports/noise/src/io/: framed.rs
transports/plaintext/src/: handshake.rs
transports/pnet/: Cargo.toml
transports/pnet/src/: crypt_writer.rs  lib.rs
transports/quic/: Cargo.toml
transports/tcp/src/: lib.rs
transports/wasm-ext/: Cargo.toml
transports/wasm-ext/src/: dtls.rs  lib.rs  webrtc.js
