[package]
name = "libp2p-wasm-ext"
edition = "2021"
rust-version = "1.60.0"
description = "Allows passing in an external transport in a WASM environment"
version = "0.39.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
license = "MIT"
repository = "https://github.com/libp2p/rust-libp2p"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
futures = "0.3.28"
js-sys = "0.3.61"
libp2p-core = { version = "0.39.0", path = "../../core", default-features = false, features = ["ecdsa"]  }
parity-send-wrapper = "0.1.0"
wasm-bindgen = "0.2.42"
wasm-bindgen-futures = "0.4.34"
x509-parser = "0.14.0"
log = "0.4.8"

[features]
websocket = []
webrtc = []
